<resources>
    <string name="app_name">Speed-Post</string>

    <string name="steps">

		\n<b>This kiosk has been developed to make the process of posting easier and more efficient for the
citizens of India. Following is how it can be done:</b>
        \n
<b><i>1.</i></b>	A QR code needs to be generated, which will contain the information about the address of the
	sender and the receiver. This QR code can be generated at home using our app (whatever the
	name of the app is, with its QR code for scanning maybe, so that it becomes more convenient
	for the user) or it can be printed by this machine by clicking on<i>“Print QR code”</i> .\n
<b><i>2.</i></b>	Once the QR code is printed and pasted on the letter/parcel, you can go to <i>“Post the
	letter/parcel”</i>.\n
<b><i>3.</i></b>	You will have to let the machine scan the QR code first and put the letter into the designated
	place below. The letter will be locked in the box.\n
<b><i>4.</i></b>	<i>(Optional)</i> A map to show the destination will be shown for confirmation.\n
<b><i>5.</i></b>	You can then click on <i>“Make Payment”</i> option and make the payment using our app (again, if
	that is the way it is supposed to be done) or any other application (maybe note acceptor as
	well?).\n
<b><i>6.</i></b>	Once the payment is approved and accepted, the letter will be dropped inside the machine and
	you are good to go!\n

<b><i>7.</i></b>	Make sure the scanned QR code is the same as that pasted on the letter or you letter
	will not reach the correct destination.

    </string>

	<string name="steps_hindi">

		\n<b>इस कियॉस्क को विकसित करने के लिए आसान और अधिक कुशल पोस्टिंग की प्रक्रिया बनाने के लिए विकसित किया गया है| निम्नलिखित यह कैसे किया जा सकता है:</b>
		\n

		<b><i>1.</i></b>	एक QR कोड उत्पन्न करने के लिए, जो प्रेषक और प्राप्तकर्ता के पते के बारे में जानकारी हो जाएगा की जरूरत है। इस QR कोड (जो भी ऐप का नाम,
		अपनी QR कोड स्कैन कर रहा है हो सकता है, के लिए है कि यह उपयोगकर्ता के लिए और अधिक सुविधाजनक हो जाता है के साथ है)
		हमारे एप्लिकेशन का उपयोग कर घर पर उत्पन्न किया जा कर सकते हैं या यह इस मशीन द्वारा <i>"प्रिंट QR कोड"</i> पर क्लिक करके मुद्रित किया जा सकता है|\n

		<b><i>2.</i></b>	एक बार QR कोड मुद्रित और पत्र/पार्सल पर चिपकाया जाता है, आप <i>"पत्र/पार्सल पोस्ट"</i> करने के लिए जा सकते हैं । \n

		<b><i>3.</i></b>	आप मशीन पहली बार QR कोड को स्कैन और पत्र नीचे दिए गए निर्धारित जगह में डाल करने के लिए होगा। पत्र बॉक्स में अवरोधित हो जाएगा ।  \n

		<b><i>4.</i></b>	<i>(वैकल्पिक)</i> पुष्टि करने के लिए गंतव्य को दिखाने के लिए एक नक्शा दिखाया जाएगा । \n

		<b><i>5.</i></b>	आप उसके बाद <i>"Make Payment"</i> विकल्प पर क्लिक करें और हमारे एप्लिकेशन का उपयोग करके भुगतान कर सकते हैं
		(जो का तरीका है, तो फिर, यह किया जा करने के लिए माना जाता है) या किसी अन्य अनुप्रयोग (शायद नोट acceptor रूप में अच्छी तरह से?)। \n

		<b><i>6.</i></b>	एक बार भुगतान को मंजूरी दे दी है और स्वीकार किए जाते हैं, पत्र मशीन के अंदर छोड़ दिया जाएगा और तुम जाना अच्छा कर रहे हैं! \n

		<b><i>7.</i></b>	सुनिश्चित करें कि स्कैन की गई QR कोड की तरह ही पत्र पर चिपकाया जाता है या आप पत्र सही गंतव्य तक पहुंचने नहीं होगा।| \n

	</string>


	<string name="how">
		How to use this Kiosk
	</string>


    <string name="how_hindi">
		इस कियॉस्क का उपयोग कैसे करें
    </string>


	<string name="back_hindi">
		पिछले पृष्ठ पर वापस जाएँ
	</string>


	<string name="print_QR_hin">
		QR कोड प्रिंट करें
	</string>


	<string name="post_hin">
		पत्र / पार्सल पोस्ट करें
	</string>

	<string name="scan_hin1">
		1.नीचे दिए गए स्कैनर के अंतर्गत QR कोड स्कैन करें
	</string>

	<string name="generateQR_Hindi">
		QR कोड उत्पन्न करें
	</string>

    <string name="printing_QR_hindi">
        QR कोड मुद्रित करना
    </string>



</resources>
