<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="8dp">

    <Button
        android:id="@+id/use_kiosk_hindi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:padding="20dp"
        android:text="@string/how_hindi"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/print_QR_hindi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/print_QR_hin"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/post_letter_hin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/post_hin"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/back_hin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/back_hindi"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>