<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/printing_QR_hindi"
        android:textSize="25sp"
        android:id="@+id/textView14" />

    <!--
     The QR code will be put here
     -->

    <Button
        android:id="@+id/hardprint_QR_hindi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_QR_hin"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/back_from_print_hindi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/hardprint_QR_hindi"
        android:layout_centerHorizontal="true"
        android:text="@string/back_hindi"
        android:textSize="25sp" />

</RelativeLayout>